veraltetes Straßennetz, drop nur auf straßenabschnitten in SpielViewController angefangen (noch nicht fertig)